demo-istio/simpleapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: echoserver
        version: v1
    spec:
      containers:
      - name: app
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - containerPort: 8080
